Test mail commit

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -12,9 +12,11 @@
         <div class="col-md-8 offset-md-2 mb-3">
             <h1 class="text-center">{% trans "Password Reset" %}</h1>
         </div>
-        {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
+        <div class="col-md-8 offset-md-2 mb-2">
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+        </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
 
             <h4 class="text-center mt-2">
