--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,23 +6,26 @@
 
 {% block content %}
 
-<div class="container-fluid d-flex justify-content-center mt-5 mb-5">
-    <div class="row">
+{%load crispy_forms_tags %}
+
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
             <h1 class="text-center">{% trans "Logout" %}</h1>
         </div>
-
         <div class="account-form bg-light col-md-8 offset-md-2">
+
             <h4 class="text-center mt-2">
                 {% trans "Are you sure you want to Logout?" %}
             </h4>
-            <form class="login text-center m-4" method="post" action="{% url 'account_logout' %}">
+            <form class="login col-8 pb-3" method="POST" action="{% url 'account_logout' %}">
                 {% csrf_token %}
+                {{ form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="primaryAction btn btn-outline-danger" type="submit">{% trans 'Sign Out' %}</button>
-                <a class="primaryAction btn w-50 mt-2" href="{% url 'home' %}">Cancel</a>
+                <button class="primaryAction btn btn-outline-danger col-12 mt-3" type="submit">{% trans 'Sign Out' %}</button>
+                <a class="primaryAction btn col-12 mt-2" href="{% url 'home' %}">Cancel</a>
             </form>
         </div>
     </div>
