--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,35 +7,38 @@
 
 {% block content %}
 
+{%load crispy_forms_tags %}
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
-        <div class="col-md-8 offset-md-2 mb-3">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
             <h1 class="text-center">{% trans "Password Reset" %}</h1>
         </div>
-        <div class="col-md-8 offset-md-2 mb-2">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-2">
             {% if user.is_authenticated %}
             {% include "account/snippets/already_logged_in.html" %}
             {% endif %}
         </div>
-        <div class="account-form bg-light col-md-8 offset-md-2">
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
 
             <h4 class="text-center mt-2">
                 {% trans "Forgotten your password?" %}
             </h4>
             <p class="text-center">{% trans "Enter your e-mail address below.<br>We'll send you an e-mail allowing you to reset it." %}</p>
 
-            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset text-center m-2 p-2">
+            <form class="login col-12 col-sm-9 col-md-12 col-lg-9 border-bottom border-primary pb-3" method="POST" action="{% url 'account_reset_password' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input class="primaryAction btn signup_button w-75" type="submit" value="{% trans 'Reset My Password' %}" />
+                {{ form|crispy }}
+                <input class="primaryAction btn signup_button col-12" type="submit" value="{% trans 'Reset My Password' %}" />
             </form>
-
-            <h5 class="text-center">
+            <h5 class="mt-3 col-lg-9 text-center">
                 {% trans "Please contact us if you have any trouble resetting your password." %}
                 <br>
                 reportsreach@gmail.com
             </h5>
-            <a class="btn signup_button mb-2" href="{% url 'home' %}">Back to Home</a>
+            <a href="{% url 'home' %}" class="m-sm-3 col-12 btn">
+                Back to Home
+            </a>
         </div>
     </div>
 </div>
