--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,6 +7,8 @@
 
 {% block content %}
 
+{%load crispy_forms_tags %}
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
@@ -14,56 +16,27 @@
         </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
 
-            <h4 class="text-center mt-2">{% trans "Welcome back to Reach.<br>We hope your adventures were a success." %}
+            <h4 class="text-center mt-2">
+                {% trans "Welcome back to Reach.<br>We hope your adventures were a success." %}
             </h4>
 
-            <form class="login text-center border-bottom border-primary m-2 p-3" method="POST" action="{% url 'account_login' %}">
+            <form class="login col-12 border-bottom border-primary pb-3" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="primaryAction btn signup_button w-75" type="submit">{% trans "Login" %}</button>
-                <a class="d-block mt-2 button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                <button class="primaryAction btn signup_button col-12" type="submit">{% trans "Login" %}</button>
             </form>
-            <h5 class="text-center">
+            <h5 class="mt-3 text-center">
                 {% blocktrans %}Want to join the community?
             </h5>
-            <a href="{{ signup_url }}" class="m-sm-3 w-50 btn btn-success">
-                Sign Up
+            <a href="{{ signup_url }}" class="m-sm-3 col-12 btn btn-success">
+                Signup
             </a>
             {% endblocktrans %}
-
         </div>
     </div>
 </div>
 
 {% endblock %}
-
-<!-- {% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-
-----
-
-{% endif %}
-
-
-<!--  -->
