--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -7,21 +7,24 @@
 
 {% block content %}
 
+{%load crispy_forms_tags %}
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
-        <div class="col-md-8 offset-md-2 mb-3">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
             <h1 class="text-center">{% trans "Password Reset" %}</h1>
         </div>
-        {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
-        <div class="account-form bg-light col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-2">
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
 
             <h4 class="text-center mt-2">
                 {% trans "Reset Email Sent" %}
             </h4>
-
-            <p class="text-center w-75">
+            <p class="text-center col-lg-9">
                 {% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder.
                 Otherwise
                 contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
