--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+{%load crispy_forms_tags %} 
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
@@ -16,20 +18,20 @@
             <h4 class="text-center mt-2">
                 {% trans "Welcome to Reach." %}
             </h4>
-            <p class="text-center">{% trans "To comment, like and create your own reports for other climbers,<br>please fill in the form below." %}</p>
+            <p class="text-center">{% trans "To comment, like and create your own reports for other climbers, please fill in the form below." %}</p>
 
-            <form class="login d-flex flex-column align-items-center border-bottom border-primary m-2 p-3" method="POST" action="{% url 'account_signup' %}">
+            <form class="login col-12 border-bottom border-primary pb-3" method="POST" action="{% url 'account_signup' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="primaryAction btn signup_button w-75" type="submit">{% trans "Signup" %}</button>
+                <button class="primaryAction btn signup_button col-12" type="submit">{% trans "Sign Up" %}</button>
             </form>
-            <h5 class="text-center">
+            <h5 class="mt-3 text-center">
                 {% blocktrans %}Already have an account?
             </h5>
-            <a href="{{ login_url }}" class="m-sm-3 w-50 btn btn-success">
+            <a href="{{ login_url }}" class="m-sm-3 col-12 btn btn-success">
                 Login
             </a>
             {% endblocktrans %}
