Update password template responsiveness

--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -5,17 +5,18 @@
 
 {% block content %}
 
+{%load crispy_forms_tags %}
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
-        <div class="col-md-8 offset-md-2 mb-3">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
             <h1 class="text-center">
                 {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
             </h1>
         </div>
-
         {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <div class="account-form bg-light col-md-8 offset-md-2">
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
             <h4 class="text-center mt-2">
                 {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please
                 request a new reset link below.{% endblocktrans %}
@@ -23,12 +24,12 @@
             <a class="btn signup_button" href="{{ passwd_reset_url }}">New Reset Link</a>
         </div>
         {% else %}
-        <div class="account-form bg-light col-md-8 offset-md-2">
+        <div class="account-form bg-light col-md-8 offset-md-2 offset-md-2 col-lg-6 offset-lg-3">
             <h4 class="text-center m-2">Please enter and confirm you new password.</h4>
-            <form class="text-center m-2 p-2" method="POST" action="{{ action_url }}">
+            <form class="col-12 col-sm-9 col-md-12 col-lg-9 pb-3" method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input class="btn signup_button" type="submit" name="action" value="{% trans 'change password' %}" />
+                {{ form|crispy }}
+                <input class="btn signup_button col-12" type="submit" name="action" value="{% trans 'change password' %}" />
             </form>
         </div>
         {% endif %}
