--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -65,8 +65,9 @@
                             </div>
                             <!-- add image -->
                             <div class="col-12 mt-2">
-                                <label for="upload"><i class="fa-solid fa-camera"></i> Upload More Images:</label>
-                                <input class="btn" id="upload" type="file" name="images" multiple>
+                                <label for="upload"><i class="fa-solid fa-camera"></i> Upload More Images: <span
+                                        class="text-danger">Max Total 12</span></label>
+                                <input class="btn" id="upload" type="file" name="images" accept="image/*" multiple>
                             </div>
                         </div>
                         <div class="col-6">
@@ -113,4 +114,3 @@
 </div>
 
 {% endblock %}
-
