--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -7,17 +7,18 @@
 
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
-        <div class="col-md-8 offset-md-2 mb-3">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
             <h1 class="text-center">
                 {% trans "Password Updated" %}
             </h1>
         </div>
-        <div class="account-form bg-light col-md-8 offset-md-2">
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
             <h4 class="text-center mt-2">
                 {% trans 'Your password has been updated successfully.<br>Please Login again.' %}
             </h4>
-            <a href="{% url 'account_login' %}" class="btn signup_button w-50 mb-2">Login</a>
+            <a class="btn signup_button col-sm-9 col-md-12 col-lg-9" href="{% url 'account_login' %}">Login</a>
         </div>
+        
     </div>
 </div>
 
