--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -7,67 +7,63 @@
 <div class="container-fluid p-3">
     <div class="row text-center d-flex flex-column align-items-center">
         <h1 class="mb-3">Create New Report</h1>
-        <h3 class="w-75 m-0 text-start">Creating report as: <span class="text-secondary">{{ user.username }}</span></h3>
+        <h3 class="col-12 col-md-9 m-0 text-start">Creating report as: <span class="text-secondary">{{ user.username }}</span></h3>
     </div>
 </div>
 
-<div class="container-fluid d-flex justify-content-center">
-    <div class="row w-75 bg-light rounded p-3 mb-3">
+<div class="container-fluid d-flex justify-content-center p-0 pb-3 p-sm-3">
+    <div class="row col-12 col-md-9 bg-light rounded pt-2 p-sm-3 mb-3">
 
-        <form method="post" enctype="multipart/form-data">
+        <form id="create_form" class="text-start pb-3" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <div class="col-md-12">
-
-                <div class="container text-start">
-                    <div class="row g-2">
-                        <div class="col-8">
-                            {{ report_form.title|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.goal_reached|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            {{ report_form.start_date|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            {{ report_form.end_date|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.overall_conditions|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.activity_category|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.height_in_meters|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.number_in_group|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.number_on_route|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.time_taken|as_crispy_field }}
-                        </div>
-                        <div class="col-12">
-                            {{ report_form.description|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            <label for="upload"><i class="fa-solid fa-camera"></i> Upload Images:</label>
-                            <br>
-                            <input class="btn" id="upload" type="file" name="images" multiple>
-                        </div>
-                        <div class="col-6">
-                            {{ report_form.gps_map_link|as_crispy_field }}
-                        </div>
-                        <div class="col-2">
-                            {{ report_form.status|as_crispy_field }}
-                        </div>
-                        <div class="col-12 d-flex flex-row justify-content-center">
-                            <input class="btn btn-success" type="submit" value="Create Report">
-                        </div>
-                    </div>
+            <div class="row col-12 justify-content-center justify-content-sm-start g-2">
+                <div class="create_item col-12 col-md-8">
+                    {{ report_form.title|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.goal_reached|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4 col-md-6">
+                    {{ report_form.start_date|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4 col-md-6">
+                    {{ report_form.end_date|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.overall_conditions|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.activity_category|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.height_in_meters|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.number_in_group|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.number_on_route|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.time_taken|as_crispy_field }}
+                </div>
+                <div class="col-12">
+                    {{ report_form.description|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-6">
+                    <label for="upload"><i class="fa-solid fa-camera"></i> Upload Images: <span
+                        class="text-danger">Max Total 12</span></label>
+                    <br>
+                    <input class="btn" id="upload" type="file" name="images" multiple>
+                </div>
+                <div class="col-12 col-sm-6">
+                    {{ report_form.gps_map_link|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ report_form.status|as_crispy_field }}
+                </div>
+                <div class="col-12 d-flex flex-row justify-content-center">
+                    <input class="col-12 btn btn-success" type="submit" value="Create Report">
                 </div>
             </div>
         </form>
