--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -7,108 +7,102 @@
 <div class="container-fluid p-3">
     <div class="row text-center d-flex flex-column align-items-center">
         <h1 class="mb-3">Edit Report</h1>
-        <h3 class="w-75 m-0 text-start">Editing report as: <span class="text-secondary">{{ user.username }}</span></h3>
+        <h3 class="col-12 col-md-9 col-lg-6 m-0 text-start">Editing report as: <span class="text-secondary">{{ user.username }}</span></h3>
     </div>
 </div>
 
-<div class="container-fluid d-flex justify-content-center">
-    <div class="row w-75 bg-light rounded p-3 mb-3">
+<div class="container-fluid d-flex justify-content-center p-0 pb-3 p-sm-3">
+    <div class="row col-12 col-md-9 col-lg-6 bg-light rounded pt-2 p-sm-3 mb-3">
 
-        <form method="POST" action="" enctype="multipart/form-data" id="edit-report-form">
+        <form method="POST" class="text-start pb-3" action="" enctype="multipart/form-data" id="edit-report-form">
             {% csrf_token %}
-            <div class="col-md-12">
-                <div class="container text-start">
-                    <div class="row g-2">
-                        <div class="col-8">
-                            {{ edit_form.title|as_crispy_field }}
+            <div class="row col-12 justify-content-center justify-content-sm-start g-2">
+                <div class="col-12 col-sm-8">
+                    {{ edit_form.title|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.goal_reached|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-6">
+                    {{ edit_form.start_date|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-6">
+                    {{ edit_form.end_date|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.overall_conditions|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.activity_category|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.height_in_meters|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.number_in_group|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.number_on_route|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.time_taken|as_crispy_field }}
+                </div>
+                <div class="col-12">
+                    {{ edit_form.description|as_crispy_field }}
+                </div>
+                <div class="col-12">
+                    <div class="row">
+                        {% for image in images %}
+                        <div class="report_img_wrapper col-sm-3">
+                            <img class="report-img" src="{{ image.image_file.url }}" alt="Image" height="100">
+                            <!-- Delete Image -->
+                            <p class="text-secondary d-inline">Delete</p>
+                            <input type="checkbox" name="delete_image_{{ image.id }}" data-marked-for-deletion>
                         </div>
-                        <div class="col-4">
-                            {{ edit_form.goal_reached|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            {{ edit_form.start_date|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            {{ edit_form.end_date|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ edit_form.overall_conditions|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ edit_form.activity_category|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ edit_form.height_in_meters|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ edit_form.number_in_group|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ edit_form.number_on_route|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ edit_form.time_taken|as_crispy_field }}
-                        </div>
-                        <div class="col-12">
-                            {{ edit_form.description|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            <div class="row">
-                                {% for image in images %}
-                                <div class="col-4">
-                                    <img class="report-img" src="{{ image.image_file.url }}" alt="Image" height="100">
-                                    <!-- Delete Image -->
-                                    <p class="text-secondary d-inline">Delete</p>
-                                    <input type="checkbox" name="delete_image_{{ image.id }}" data-marked-for-deletion>
-                                </div>
-                                {% endfor %}
+                        {% endfor %}
+                    </div>
+                    <!-- add image -->
+                    <div class="col-12 mt-2">
+                        <label for="upload"><i class="fa-solid fa-camera"></i> Upload More Images: <span
+                                class="text-danger">Max Total 12</span></label>
+                        <input class="btn" id="upload" type="file" name="images" accept="image/*" multiple>
+                    </div>
+                </div>
+                <div class="col-12">
+                    {{ edit_form.gps_map_link|as_crispy_field }}
+                </div>
+                <div class="col-12 col-sm-4">
+                    {{ edit_form.status|as_crispy_field }}
+                </div>
+                <!-- Modal -->
+                <div class="modal" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="confirmationModalLabel">Confirm Deletion</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
                             </div>
-                            <!-- add image -->
-                            <div class="col-12 mt-2">
-                                <label for="upload"><i class="fa-solid fa-camera"></i> Upload More Images: <span
-                                        class="text-danger">Max Total 12</span></label>
-                                <input class="btn" id="upload" type="file" name="images" accept="image/*" multiple>
+                            <div class="modal-body">
+                                Are you sure you want to delete the selected images? This action cannot be
+                                undone.
                             </div>
-                        </div>
-                        <div class="col-6">
-                            {{ edit_form.gps_map_link|as_crispy_field }}
-                        </div>
-                        <div class="col-2">
-                            {{ edit_form.status|as_crispy_field }}
-                        </div>
-                        <!-- Modal -->
-                        <div class="modal" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="confirmationModalLabel">Confirm Deletion</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Are you sure you want to delete the selected images? This action cannot be
-                                        undone.
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-bs-dismiss="modal">Cancel</button>
-                                        <button type="button" class="btn btn-danger"
-                                            onclick="submitForm()">Confirm</button>
-                                    </div>
-                                </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-danger" onclick="submitForm()">Confirm</button>
                             </div>
-                        </div>
-                        <!-- Submit -->
-                        <div class="col-12 d-flex flex-row justify-content-center">
-                            <button type="button" class="btn btn-success" onclick="showConfirmationModal()">
-                                Update Report
-                            </button>
                         </div>
                     </div>
                 </div>
-                <input type="hidden" name="confirm-deletion" id="confirm-deletion" value="false">
+                <!-- Submit -->
+                <div class="col-12 d-flex flex-row justify-content-center">
+                    <button type="button" class="col-12 btn btn-success" onclick="showConfirmationModal()">
+                        Update Report
+                    </button>
+                </div>
             </div>
+            <input type="hidden" name="confirm-deletion" id="confirm-deletion" value="false">
         </form>
     </div>
 </div>
