--- a/templates/account.html
+++ b/templates/account.html
@@ -93,16 +93,16 @@
             <i class="fa-solid fa-camera"></i>
         </div>
         <div class="col-3">
-            <p>Title</p>
+            <p><i class="fa-solid fa-route"></i></p>
         </div>
         <div class="col-2">
-            <p>Conditions</p>
+            <p><i class="fa-solid fa-cloud-sun-rain"></i></p>
         </div>
         <div class="col-2">
-            <p>Published</p>
+            <p><i class="fa-solid fa-share-from-square"></i></p>
         </div>
         <div class="col-2">
-            <p>Date</p>
+            <p><i class="fa-solid fa-calendar-days"></i></p>
         </div>
     </div>
 
