--- a/templates/reports.html
+++ b/templates/reports.html
@@ -62,18 +62,18 @@
     </div>
 
     <!-- List Key -->
-    <div id="list-key" class="row text-center text-muted pt-3">
-        <div class="col-3">
+    <div id="list-key" class="row text-center justify-content-evenly text-muted pt-3">
+        <div id="camera" class="col-3">
             <i class="fa-solid fa-camera"></i>
         </div>
         <div class="col-4 col-sm-3">
-            <p>Title</p>
+            <p><i class="fa-solid fa-route"></i></p>
         </div>
         <div class="col-2 col-sm-3">
-            <p>Conditions</p>
+            <p><i class="fa-solid fa-cloud-sun-rain"></i></p>
         </div>
         <div class="col-3">
-            <p>Activity Date</p>
+            <p><i class="fa-solid fa-calendar-days"></i></p>
         </div>
     </div>
 
@@ -81,10 +81,10 @@
     <div class="row">
 
         {% for report in report_list %}
-        <a href="{% url 'report_details' report.pk  %}" class="report-list-item d-flex p-1 btn btn-light mb-2">
+        <a href="{% url 'report_details' report.pk  %}" class="report-list-item d-flex justify-content-evenly p-1 btn btn-light mb-2">
 
             <!-- Images -->
-            <div class="d-flex col-3 align-items-center justify-content-center">
+            <div class="list_image d-sm-flex col-3 align-items-center justify-content-center">
                 {% if report.images.count > 0 %}
                 <!-- Images are uploaded for the report -->
                 {% for image_file in report.images.all %}
