--- a/templates/reports.html
+++ b/templates/reports.html
@@ -62,8 +62,8 @@
     </div>
 
     <!-- List Key -->
-    <div id="list-key" class="row text-center justify-content-evenly text-muted pt-3">
-        <div id="camera" class="col-3">
+    <div class="list-key row text-center justify-content-evenly text-muted pt-3">
+        <div class="camera col-3">
             <i class="fa-solid fa-camera"></i>
         </div>
         <div class="col-4 col-sm-3">
