--- a/templates/update_account.html
+++ b/templates/update_account.html
@@ -7,20 +7,23 @@
 {%load crispy_forms_tags %} 
 
 <div class="container-fluid d-flex justify-content-center mt-5">
-    <div class="row w-75 mb-5">
+    <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
             <h1 class="text-center">Update Account Details</h1>
         </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
+
             <h4 class="text-center mt-2">
                 Edit account details for {{ user.username }}.
             </h4>
-            <form class="text-center w-75 m-2 p-3" method="POST">
+            <form class="login col-12 col-lg-6 border-bottom border-primary pb-3" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn signup_button border-none w-75">Update</button>
+                <button class="primaryAction btn signup_button col-12" type="submit">Update</button>
             </form>
-            <a class="d-block mb-2 button" href="{% url 'account_reset_password' %}">Reset Account Password</a>
+            <a href="{% url 'account_reset_password' %}" class="m-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
+                Reset Account Password
+            </a>
         </div>
     </div>
 </div>
