--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -6,16 +6,16 @@
 
 <!-- Title & back button -->
 
-<div class="container-fluid d-flex flex-column align-items-center mt-3">
-    <div class="row w-75">
-        <div class="col-10 p-0">
+<div class="container-fluid d-flex flex-column align-items-between align-items-sm-center mt-3">
+    <div class="row col-12 col-md-9 col-xl-7">
+        <div id="report-title" class="col-10 ps-3">
             <h1>{{ report.title }}</h1>
             <h2>{{ report.start_date }}</h2>
         </div>
-        <div class="col-2 pb-2 d-flex flex-row justify-content-end align-items-end text-center">
+        <div class="col-2 pb-2 pe-0 pe-sm-3 d-flex flex-row justify-content-end align-items-end text-center">
             <a class="back-button" href="{% url 'reports' %}">
                 <i class="fa-solid fa-list"></i>
-                <p class="m-0">Reports List</p>
+                <p class="d-none d-sm-block m-0">Reports List</p>
             </a>
         </div>
     </div>
@@ -24,159 +24,142 @@
 <!-- Report -->
 
 <div class="container-fluid d-flex justify-content-center">
-    <div class="row w-75 bg-light rounded p-3 mb-3">
+    <div class="row flex-column flex-lg-row col-12 col-md-9 col-xl-7 bg-light rounded pt-2 p-sm-3 mb-3">
         <!-- Info -->
-        <div class="col-12 col-lg-6">
-
-            <div class="container text-start">
-                <div class="row g-2">
-                    <div class="col-12">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">Author:</p>
-                            <p class="info-item">{{ report.author }}</p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">End Date:</p>
-                            <p class="info-item">{{ report.end_date }}</p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">Climb Type:</p>
-                            <p class="info-item">{{ report.activity_category|title }}</p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">Conditions:</p>
-                            <p class="info-item">
-                                &nbsp;
-                                {% if report.overall_conditions == "perfect" %}
-                                <i class="fa-solid fa-star"></i>
-                                {% elif report.overall_conditions == "good" %}
-                                <i class="fa-solid fa-circle-check"></i>
-                                {% elif report.overall_conditions == "ok" %}
-                                <i class="fa-solid fa-circle-exclamation"></i>
-                                {% else %}
-                                <i class="fa-solid fa-circle-xmark"></i>
-                                {% endif %}
-                                {{ report.overall_conditions|title }}&nbsp;&nbsp;
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">Goal Reached:</p>
-                            <p class="info-item">
-                                &nbsp;
-                                {% if report.goal_reached == "yes" %}
-                                <i class="fa-solid fa-circle-check text-warning"></i>
-                                {% else %}
-                                <i class="fa-solid fa-ban text-danger"></i>
-                                {% endif %}
-                                {{ report.goal_reached|title }}&nbsp;&nbsp;
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted mt-1">
-                                <i class="fa-solid fa-person-hiking fs-6">-</i>
-                                <i class="fa-solid fa-person-hiking fs-6"></i> People in Group:</p>
-                            <p class="info-item">{{ report.number_in_group }}</p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-
-                            <p class="info-label text-muted mt-1"><i class="fa-solid fa-people-group fs-6"></i>
-                                People on Route:</p>
-                            <p class="info-item">{{report.number_on_route}}</p>
-                        </div>
-                    </div>
-                    {% if report.height_in_meters %}
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">Summit Height (masl):</p>
-                            <p class="info-item">{{ report.height_in_meters }}m</p>
-                        </div>
-                    </div>
-                    {% endif %}
-                    {% if report.time_taken %}
-                    <div class="col-6">
-                        <div class="border rounded bg-light">
-                            <p class="info-label text-muted">Time Taken (Speed Ascent):</p>
-                            <p class="info-item">{{ report.time_taken }}</p>
-                        </div>
-                    </div>
-                    {% endif %}
-                    <div class="col-12">
-                        <div class="border rounded bg-light text-start">
-                            <p class="info-label text-muted">Description:</p>
-                            <p id="report-description">{{ report.description|striptags }}</p>
-                        </div>
-                    </div>
+        <div class="col-lg-6 text-start">
+            <div class="row g-2">
+                <div class="col-12 border rounded bg-light">
+                    <p class="info-label text-muted">Author:</p>
+                    <p class="info-item">{{ report.author }}</p>
+                </div>
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted">End Date:</p>
+                    <p class="info-item">{{ report.end_date }}</p>
+                </div>
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted">Climb Type:</p>
+                    <p class="info-item">{{ report.activity_category|title }}</p>
+                </div>
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted">Conditions:</p>
+                    <p class="info-item">
+                        &nbsp;
+                        {% if report.overall_conditions == "perfect" %}
+                        <i class="fa-solid fa-star"></i>
+                        {% elif report.overall_conditions == "good" %}
+                        <i class="fa-solid fa-circle-check"></i>
+                        {% elif report.overall_conditions == "ok" %}
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        {% else %}
+                        <i class="fa-solid fa-circle-xmark"></i>
+                        {% endif %}
+                        {{ report.overall_conditions|title }}&nbsp;&nbsp;
+                    </p>
+                </div>
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted">Goal Reached:</p>
+                    <p class="info-item">
+                        &nbsp;
+                        {% if report.goal_reached == "yes" %}
+                        <i class="fa-solid fa-circle-check text-warning"></i>
+                        {% else %}
+                        <i class="fa-solid fa-ban text-danger"></i>
+                        {% endif %}
+                        {{ report.goal_reached|title }}&nbsp;&nbsp;
+                    </p>
+                </div>
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted mt-1">
+                        <i class="fa-solid fa-person-hiking fs-6">-</i>
+                        <i class="fa-solid fa-person-hiking fs-6"></i> People in Group:</p>
+                    <p class="info-item">{{ report.number_in_group }}</p>
+                </div>
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted mt-1">
+                        <i class="fa-solid fa-people-group fs-6"></i>
+                        People on Route:
+                    </p>
+                    <p class="info-item">{{report.number_on_route}}</p>
+                </div>
+                {% if report.height_in_meters %}
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted">Summit Height (masl):</p>
+                    <p class="info-item">{{ report.height_in_meters }}m</p>
+                </div>
+                {% endif %}
+                {% if report.time_taken %}
+                <div class="col-6 border rounded bg-light">
+                    <p class="info-label text-muted">Time Taken (Speed Ascent):</p>
+                    <p class="info-item">{{ report.time_taken }}</p>
+                </div>
+                {% endif %}
+                <div class="col-12 border rounded bg-light text-start">
+                    <p class="info-label text-muted">Description:</p>
+                    <p id="report-description">{{ report.description|striptags }}</p>
                 </div>
             </div>
         </div>
+
 
         <!-- Images -->
 
-        <div class="col-12 col-lg-6 mt-2 mt-lg-0 p-3 p-lg-0">
-            <div class="container">
-                <div class="row">
-                    {% if report.images.count > 0 %}
-                    <p class="info-label text-muted m-0 p-0">Images: (click to enlarge)</p>
-                    {% for image_file in report.images.all %}
-                    <button type="button" class="report-img col-4" data-bs-toggle="modal"
-                        data-bs-target="#myModal{{image_file.pk}}">
-                        <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}">
-                    </button>
-                    {% endfor %}
-                    {% else %}
-                    <div class="report-img">
-                        <img src="/static/images/no-images.png" alt="No images available">
-                    </div>
-                    {% endif %}
+        <div class="col-lg-6 col-lg-6 mt-2 mt-lg-0">
 
-                    {% for image_file in report.images.all %}
-                    <div class="modal fade" id="myModal{{ image_file.pk }}" tabindex="-1"
-                        aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel"><i
-                                            class="fa-solid fa-camera"></i>
-                                        {{ report.title }}</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <img class="img-fluid" src="{{ image_file.image_file.url }}"
-                                        alt="{{ report.title }}">
-                                </div>
-                                <div class="modal-footer justify-content-center">
-                                    <button type="button" id="close-img-btn" class="btn btn-light w-50"
-                                        data-bs-dismiss="modal">Close Image</button>
-                                </div>
+            <div class="row ps-3 pe-3 p-lg-0">
+                {% if report.images.count > 0 %}
+                <p class="info-label text-muted m-0 p-0"><i class="fa-solid fa-camera"></i> Images: (click to enlarge)</p>
+                {% for image_file in report.images.all %}
+                <button type="button" class="report-img col-4" data-bs-toggle="modal"
+                    data-bs-target="#myModal{{image_file.pk}}">
+                    <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}">
+                </button>
+                {% endfor %}
+                {% else %}
+                <div class="report-img">
+                    <img src="/static/images/no-images.png" alt="No images available">
+                </div>
+                {% endif %}
+                <!-- Image Modal -->
+                {% for image_file in report.images.all %}
+                <div class="modal fade" id="myModal{{ image_file.pk }}" tabindex="-1"
+                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel"><i class="fa-solid fa-camera"></i>
+                                    {{ report.title }}</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-center">
+                                <img class="img-fluid" src="{{ image_file.image_file.url }}" alt="{{ report.title }}">
+                            </div>
+                            <div class="modal-footer justify-content-center">
+                                <button type="button" id="close-img-btn" class="btn btn-light w-50"
+                                    data-bs-dismiss="modal">Close Image</button>
                             </div>
                         </div>
                     </div>
-                    {% endfor %}
                 </div>
-                {% if report.gps_map_link %}
-                <div class="row mt-2 mt-lg-0">
-                    <p class="info-label text-muted m-0 p-0">Interactive Map:</p>
-                    <iframe class="col-12 mt-2 p-0" src="{{ report.gps_map_link }}" frameborder="" allowfullscreen=""
-                        height="300px"></iframe>
-                </div>
-                {% endif %}
+                {% endfor %}
             </div>
+            {% if report.gps_map_link %}
+            <div class="d-none d-xl-block col-12 mt-2 mt-lg-0">
+                <p class="info-label text-muted m-0 p-0">Interactive Map:</p>
+                <iframe class="col-12 mt-2 p-0" src="{{ report.gps_map_link }}" frameborder="" allowfullscreen=""
+                    height="300px"></iframe>
+            </div>
+            {% endif %}
         </div>
+        {% if report.gps_map_link %}
+        <div class="d-xl-none col-12 mt-2">
+            <p class="info-label text-muted m-0 p-0">Interactive Map:</p>
+            <iframe class="col-12 mt-2 p-0" src="{{ report.gps_map_link }}" frameborder="" allowfullscreen=""
+                height="300px"></iframe>
+        </div>
+        {% endif %}
         <div class="col-12 d-flex justify-content-end">
-            <p class="text-secondary mb-0 mt-2">Report Published: {{ report.created_on|date:"F j, Y" }}</p>
+            <p id="date_published" class="text-secondary mb-0 mt-2">Report Published: {{ report.created_on|date:"F j, Y" }}</p>
         </div>
     </div>
 </div>
@@ -184,12 +167,12 @@
 <!-- Comments & Likes -->
 
 <div class="container-fluid mb-3 d-flex flex-column align-items-center">
-    <div id="comments-title" class="row w-75">
+    <div id="comments-title" class="row col-12 col-sm-9 col-xl-7">
         <div class="col-8 p-0">
             <h2 class="p-0 mb-2">Comments</h2>
         </div>
         <div class="col-4 p-0 mr-2 d-flex justify-content-end align-items-center">
-            <p class="text-muted m-0 p-2">
+            <p class="counter text-muted m-0 p-2">
                 {{ report.likes.count }}
             </p>
             {% if request.user.is_authenticated %}
@@ -215,14 +198,14 @@
             </a>
             {% endif %}
             {% with comments.count as total_comments %}
-            <p class="text-muted m-0 p-2">{{ total_comments }}</p>
-            <h3><i class="far fa-comments"></i></h3>
+            <p class="counter text-muted m-0 p-2">{{ total_comments }}</p>
+            <h3 class="counter"><i class="far fa-comments"></i></h3>
             {% endwith %}
         </div>
     </div>
 
     {% for comment in comments %}
-    <div class="row w-75 justify-content-center">
+    <div class="row col-12 col-sm-9 col-xl-7 justify-content-center">
         <div class="card mt-2 bg-light">
             <div class="row g-0">
                 <div class="card-body">
@@ -274,13 +257,13 @@
     </div>
     {% endfor %}
     {% if user.is_authenticated %}
-    <div class="row w-75 p-0 mt-2">
+    <div class="row col-12 col-sm-9 col-xl-7 p-0 mt-2">
         <h6 class="p-0">Leave a comment:</h6>
         <form class="p-0" method="post">
             {{ comment_form|crispy }}
             {% csrf_token %}
             <p class="float-start"><span class="text-muted">Commenting: </span>{{ user.username }}</p>
-            <button type="submit" class="btn btn-dark float-end">Post</button>
+            <button type="submit" class="col-4 col-sm-2 col-xl-1 btn signup_button float-end">Post</button>
         </form>
         {% endif %}
     </div>
