--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -4,16 +4,21 @@
 
 {% load crispy_forms_tags %}
 
-<div class="container-fluid p-3">
+<div class="container-fluid pt-3">
     <div class="row text-center d-flex flex-column align-items-center">
         <h1 class="mb-3">Create New Report</h1>
-        <h3 class="col-12 col-md-9 col-lg-6 m-0 text-start">Creating report as: <span class="text-secondary">{{ user.username }}</span></h3>
+        <h3 class="col-12 col-md-9 col-lg-6 m-0 text-start">Creating report as: <span
+                class="text-secondary">{{ user.username }}</span>
+        </h3>
+        <div id="error">
+            {% if report_form.non_field_errors %}
+            {{ report_form.non_field_errors }}
+            {% endif %}
+        </div>
     </div>
 </div>
-
 <div class="container-fluid d-flex justify-content-center p-0 pb-3 p-sm-3">
     <div class="row col-12 col-md-9 col-lg-6 bg-light rounded pt-2 p-sm-3 mb-3">
-
         <form id="create_form" class="text-start pb-3" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="row col-12 justify-content-center justify-content-sm-start g-2">
@@ -51,8 +56,8 @@
                     {{ report_form.description|as_crispy_field }}
                 </div>
                 <div class="col-12 col-sm-6">
-                    <label for="upload"><i class="fa-solid fa-camera"></i> Upload Images: <span
-                        class="text-danger">Max Total 12</span></label>
+                    <label for="upload"><i class="fa-solid fa-camera"></i> Upload Images: <span class="text-danger">Max
+                            Total 12</span></label>
                     <br>
                     <input class="btn" id="upload" type="file" name="images" multiple>
                 </div>
