--- a/templates/base.html
+++ b/templates/base.html
@@ -56,10 +56,24 @@
                         <a class="nav-link" href="{% url 'reports' %}">Reports</a>
                     </li>
                     {% if user.is_authenticated %}
-                    <li class="nav-item">
+                    <!-- over sm -->
+                    <li class="d-none d-sm-block nav-item dropdown">
+
+                        <a id="username_dropdown" class="nav-link dropdown-toggle" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <strong>{{ user.username }}</strong>
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#">Account</a></li>
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
+                    </li>
+                    <!-- under sm -->
+                    <li class="d-sm-none nav-item">
                         <a class="nav-link" href="{% url 'account' %}">Account</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="d-sm-none nav-item">
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
