Update form error message

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -300,8 +300,13 @@ label {
     color: red;
 }
 
-.error ul {
+.error ul,
+.error p {
     margin: 8px 0 0 0;
+}
+
+.error p {
+    color: red;
 }
 
 /* Media Queries */
