--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -18,12 +18,7 @@
         {% for field in report_form %}
         {% if field.errors %}
         <div class="error">
-            {{ field.label_tag }}
-            <ul>
-                {% for error in field.errors %}
-                <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
+            <p>Invalid Input: Please alter the highlighted fields.</p>
         </div>
         {% endif %}
         {% endfor %}
