--- a/templates/account.html
+++ b/templates/account.html
@@ -18,6 +18,10 @@
             <h4 class="text-center">
                 <i class="fa-solid fa-toolbox"></i> Reach Admin
             </h4>
+            {% elif user.is_staff %}
+            <h4 class="text-center">
+                <i class="fa-solid fa-toolbox"></i> Reach Staff
+            </h4>
             {% endif %}
             <h4 class="text-center">
                 <i class="fa-solid fa-at"></i>
@@ -30,8 +34,14 @@
             {% endwith %}
             <div class="col-12 text-center m-2">
                 <a href="{% url 'update_account' %}" class="text-info">Edit Account</a>
-                <a href="#" class="text-danger ms-1" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete Account</a>
+                <a href="#" class="text-danger ms-1" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete
+                    Account</a>
             </div>
+            {% if user.is_staff or user.is_superuser %}
+            <a class="btn btn-outline-warning text-dark" href="{% url 'admin:index' %}">
+                <i class="fa-solid fa-gears"></i> Site Control
+            </a>
+            {% endif %}
         </div>
     </div>
 </div>
