Update testing in README.md

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
                         </ul>
                     </li>
-                    <!-- under sm -->
+                    <!-- Under SM -->
                     <li class="d-sm-none nav-item">
                         <a class="nav-link" href="{% url 'account' %}">Account</a>
                     </li>
