--- a/templates/reports.html
+++ b/templates/reports.html
@@ -95,7 +95,7 @@
                 {% endfor %}
                 {% else %}
                 <!-- No images available in report -->
-                <img src="{% static 'images/no-.png' %}" alt="No images available" class="img-thumbnail">
+                <img src="{% static 'images/no-images.png' %}" alt="No images available" class="img-thumbnail">
                 {% endif %}
                 <p class="img-num text-secondary">{{ report.images.all.count }}</p>
             </div>
