Fix iframe issue

--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -138,7 +138,7 @@
             </div>
             <!-- Map -->
             {% if report.gps_map_link %}
-            <div class="d-none d-xl-block col-12 mt-2 mt-lg-0">
+            <div class="d-none d-sm-block col-12 mt-2 mt-lg-0">
                 <p class="info-label text-muted m-0 p-0">Interactive Map:</p>
                 <iframe class="col-12 mt-2 p-0" src="{{ report.gps_map_link }}" frameborder="" allowfullscreen=""
                     height="300px"></iframe>
