--- a/templates/account.html
+++ b/templates/account.html
@@ -39,7 +39,7 @@
             </div>
             {% if user.is_staff or user.is_superuser %}
             <a class="btn btn-outline-warning text-dark" href="{% url 'admin:index' %}">
-                <i class="fa-solid fa-gears"></i> Site Control
+                <i class="fa-solid fa-gears"></i> Admin Site
             </a>
             {% endif %}
         </div>
