Fix edit report image responsiveness at xl size

--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -60,7 +60,7 @@
                 <div class="col-12">
                     <div class="row">
                         {% for image in images %}
-                        <div class="report_img_wrapper col-sm-3">
+                        <div class="report_img_wrapper col-sm-3 col-xxl-2">
                             <img class="report-img" src="{{ image.image_file.url }}" alt="Image" height="100">
                             <!-- Delete Image -->
                             <p class="text-secondary d-inline">Delete</p>
