--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -15,13 +15,11 @@
             {{ report_form.non_field_errors }}
             {% endif %}
         </div>
-        {% for field in report_form %}
-        {% if field.errors %}
+        {% if report_form.errors %}
         <div class="error">
-            <p>Invalid Input: Please alter the highlighted fields.</p>
+            <p>Invalid Input: Please alter the highlighted fields accordingly.</p>
         </div>
         {% endif %}
-        {% endfor %}
     </div>
 </div>
 <div class="container-fluid d-flex justify-content-center p-0 pb-3 p-sm-3">
